--- a/Spring-10-ORM-TableCreation/src/main/resources/application.properties
+++ b/Spring-10-ORM-TableCreation/src/main/resources/application.properties
@@ -1,12 +1,32 @@
-spring.datasourse.url=jdbc:h2:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+#H2 Connection
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# show sql queries in console
+#spring.jpa.show-sql=true
+#spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+
+
+#PostgreSQL Connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/cydeo_part2
+spring.datasource.username=postgres
+spring.datasource.password=Philly2022!
+
 spring.jpa.show-sql=true
-# see database in browser
-spring.h2.console.path=/h2-console
-spring.h2.console.enabled=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# in order to run data and schema .sql -> it will run first
+spring.sql.init.mode=always
+
+#if table exist drop and then create
+spring.jpa.hibernate.ddl-auto=create
+
+
+# if we try insert data in table from source but this table not exist yet because it will be created from entity bean
+spring.jpa.defer-datasource-initialization=true
