Spring-10-ORM-TableCreation

--- a/Spring-10-ORM-TableCreation/src/main/resources/application.properties
+++ b/Spring-10-ORM-TableCreation/src/main/resources/application.properties
@@ -22,11 +22,11 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # in order to run data and schema .sql -> it will run first
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
 #if table exist drop and then create
 spring.jpa.hibernate.ddl-auto=create
 
 
-# if we try insert data in table from source but this table not exist yet because it will be created from entity bean
+# first execute at entity annotation than data and schema .sql
 spring.jpa.defer-datasource-initialization=true
