Schema run successfully

--- a/Spring-13-ORM-CinemaLab/src/main/resources/application.properties
+++ b/Spring-13-ORM-CinemaLab/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # in order to run data and schema .sql -> it will run first
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
 
 #if table exist drop and then create
 spring.jpa.hibernate.ddl-auto=create
