--- a/Spring-14-ORM-Queries/src/main/resources/application.properties
+++ b/Spring-14-ORM-Queries/src/main/resources/application.properties
@@ -1,12 +1,15 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/cydeo_part2
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=Philly2022!
 
 spring.jpa.show-sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #spring.flyway.baseline-on-migrate=true
-spring.flyway.enabled=false
+
+
+
+spring.flyway.enabled=true
