--- a/Spring-13-ORM-CinemaLab/src/main/resources/application.properties
+++ b/Spring-13-ORM-CinemaLab/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #PostgreSQL Connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/cydeo_part2
+spring.datasource.url=jdbc:postgresql://localhost:5432/cinema-lab
 spring.datasource.username=postgres
 spring.datasource.password=Philly2022!
 
@@ -8,11 +8,12 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # in order to run data and schema .sql -> it will run first
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
 #if table exist drop and then create
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 # first execute at entity annotation than data and schema .sql
-spring.jpa.defer-datasource-initialization=true
+#spring.jpa.defer-datasource-initialization=true
+spring.flyway.enabled=false
