to string method updates

--- a/Spring-13-ORM-CinemaLab/src/main/resources/application.properties
+++ b/Spring-13-ORM-CinemaLab/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # in order to run data and schema .sql -> it will run first
 #spring.sql.init.mode=always
 
-#if table exist drop and then create
+#if table exist drop and then create (create)
 spring.jpa.hibernate.ddl-auto=update
 
 
