account repo Queries

--- a/Spring-13-ORM-CinemaLab/src/main/resources/application.properties
+++ b/Spring-13-ORM-CinemaLab/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/cinema-lab
 spring.datasource.username=postgres
 spring.datasource.password=Philly2022!
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
