--- a/Spring-16-REST-Jackson/src/main/resources/application.properties
+++ b/Spring-16-REST-Jackson/src/main/resources/application.properties
@@ -1,16 +1,14 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/rest-15
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=Philly2022!
 
 spring.jpa.show-sql=true
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=create
 
-spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
-
-spring.jackson.serialization.fail-on-empty-beans=false
+spring.sql.init.mode=always
 
 
